Fixed alignment of cart button.

--- a/src/app/assets/scss/partials/_cart.scss
+++ b/src/app/assets/scss/partials/_cart.scss
@@ -3,7 +3,7 @@
 		display: inline-block !important;
 		background: $brand-primary !important;
 		border-radius: 2px;
-		padding: 11px;
+		padding: 11px !important;
 		@include navbar-vertical-align(34px);
 		height: 44px;
 		width: 54px;
